base/src/apps/ParserTest/tests/0009_Dtor_ExpectedClassName.txt
struct Foo {
    ~();
};
-----
(2, 6): error: expected destructor name before '('
